# retail-analytics-data

./: README.md  pyproject.toml  requirements.txt
airflow/config/: airflow_config.yaml
airflow/dags/: csv_to_postgres_dag.py  csv_to_snowflake_dag.py  data_quality_checks_dag.py  gcs_to_bigquery_dag.py  postgres_to_snowflake_dag.py
airflow/scripts/: setup_airflow.py
dbt/models/: schema.yml
dbt/models/mart/: daily_sales_metrics.sql  product_category_analysis.sql
dbt/models/staging/: stg_sales.sql
terraform/: main.tf  outputs.tf  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variables.tf
terraform/scripts/: airflow_setup.sh
